ASUSFETest/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Graduate Application</fullName>
        <description>Process for graduate student applicants</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admitted</fullName>
        </values>
        <values>
            <fullName>Admitted - Conditional</fullName>
        </values>
        <values>
            <fullName>Applicant - In Committee</fullName>
        </values>
        <values>
            <fullName>Applicant - In Review</fullName>
        </values>
        <values>
            <fullName>Applicant - Incomplete</fullName>
        </values>
        <values>
            <fullName>Applicant - Ineligible</fullName>
        </values>
        <values>
            <fullName>Applicant - International Review</fullName>
        </values>
        <values>
            <fullName>Applicant - Low English Proficiency</fullName>
        </values>
        <values>
            <fullName>Applicant - Pending Letters of Rec</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Discontinued</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Enrolled - 21st Day</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Graduate Prospect</fullName>
        <description>Process for graduate prospective students</description>
        <isActive>true</isActive>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Prospect - Opt Out</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Undergraduate Application</fullName>
        <description>Process for the lifecycle of an undergraduate application</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admitted</fullName>
        </values>
        <values>
            <fullName>Admitted - Conditional</fullName>
        </values>
        <values>
            <fullName>Applicant - Incomplete</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Enrolled - 21st Day</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Undergraduate Prospect</fullName>
        <description>Opportunity process for prospective undergraduate students</description>
        <isActive>true</isActive>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Prospect - Opt Out</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Generic interest a prospective student is interested in</description>
        <label>Academic Interest</label>
        <referenceTo>Academic_Interest__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_AcademicInterest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Plan_Associated_College__c</fullName>
        <description>Formula field that displays the associated Academic Plan&apos;s Program (College) name.  Used in reports.</description>
        <formula>Academic_Plan__r.Program__r.Name</formula>
        <label>Academic Plan Associated College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Academic plan a prospective student is interested in or a student has applied to.</description>
        <inlineHelpText>Program student will be enrolling</inlineHelpText>
        <label>Academic Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Qualifier_Date__c</fullName>
        <description>Date the qualifier was captured for a prospective student in the Admit stage.</description>
        <label>Admit Qualifier Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admit_Qualifier_Decision__c</fullName>
        <description>Decision of a prospective student in the Admit stage</description>
        <label>Admit Qualifier Decision</label>
        <picklist>
            <picklistValues>
                <fullName>1st Choice Program unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHC Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance from Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to 4 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-20 issued by another University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major not offered at preferred campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not admitted to 1st choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Athletics elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too big)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too small)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on decision elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admit_Qualifier__c</fullName>
        <description>Response from a prospective student in the Admit stage</description>
        <label>Admit Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>I plan to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m still considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admitted_Date__c</fullName>
        <description>Date that the student was admitted into program. This date is generated in PeopleSoft.</description>
        <inlineHelpText>Date that the student was admitted. This date is generated in PeopleSoft.</inlineHelpText>
        <label>Admitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admitted_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where the student will attend for the admitted plan.</description>
        <inlineHelpText>Location where the student will attend for the admitted plan.</inlineHelpText>
        <label>Admitted Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunities (Admitted Location)</relationshipLabel>
        <relationshipName>Opportunities_AdmittedLocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admitted_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Academic plan the student was admitted</inlineHelpText>
        <label>Admitted Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunities (Admitted Plan)</relationshipLabel>
        <relationshipName>Opportunities_AdmittedPlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admitted_Session__c</fullName>
        <inlineHelpText>Session the admitted student will be starting.</inlineHelpText>
        <label>Admitted Session</label>
        <picklist>
            <picklistValues>
                <fullName>A/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Qualifier_Date__c</fullName>
        <description>Date the qualifier was captured for a prospective student in the Application stage.</description>
        <label>Applicant Qualifer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Qualifier_Decision__c</fullName>
        <description>Decision factor received when a prospective student is in the Applicant stage</description>
        <label>Applicant Qualifier Decision</label>
        <picklist>
            <picklistValues>
                <fullName>1st Choice Program unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHC Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance from Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to 4 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-20 issued by another University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major not offered at preferred campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not admitted to 1st choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Athletics elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too big)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too small)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on decision elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Qualifier__c</fullName>
        <label>Applicant Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>I plan to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m still considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>Undergraduate Admissions Application Date</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrett_Application_Date__c</fullName>
        <label>Barrett Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barrett_Application_Decision__c</fullName>
        <label>Barrett Application Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barrett_Application_ID__c</fullName>
        <label>Barrett Application ID</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Barrett_Application_Status__c</fullName>
        <inlineHelpText>Complete when test scores and letters of rec are received and ASU admitted.</inlineHelpText>
        <label>Barrett Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant - Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant - In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Rendered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Pre-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Pre-Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Purge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barrett_Decision_Date__c</fullName>
        <label>Barrett Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Score__c</fullName>
        <inlineHelpText>Calculated Index Score</inlineHelpText>
        <label>CI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <label>Career</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>College of interest related to the Program object</description>
        <label>College</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities*</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_ID__c</fullName>
        <description>The ID of the originating Lead for Opportunities created by Lead conversion</description>
        <inlineHelpText>The ID of the originating Lead for Opportunities created by Lead conversion</inlineHelpText>
        <label>Converted Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <description>Type of degree they are seeking</description>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bachelors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juris Doctor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <description>Formula field that copies over the value of the Contact__r.DoNotCall field to display on the opportunity record.</description>
        <formula>Contact__r.DoNotCall</formula>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <description>Formula field that copies over the value of the Contact__r.HasOptedOutOfEmail field to display on the opportunity record.</description>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enroll_Dep_Eligible_for_Defer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The student is eligible for the enrollment deposit to be differed.</inlineHelpText>
        <label>Eligible for Deposit Deferment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enroll_Dep_Late_Pay_App_Date__c</fullName>
        <inlineHelpText>Lists the day when the late payment was approved.</inlineHelpText>
        <label>Late Payment Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enroll_Dep_Late_Pay_App__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the student is eligible to delay the enrollment deposit.</inlineHelpText>
        <label>Late Payment Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enroll_Dep_Status_Date__c</fullName>
        <inlineHelpText>The last time the enrollment deposit status was updated.</inlineHelpText>
        <label>Enrollment Deposit Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enroll_Dep_Status__c</fullName>
        <description>Value to display the status of the enrollment deposit.</description>
        <label>Enrollment Deposit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Defer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Application_Number__c</fullName>
        <label>External Application Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Student is a first generation college student</inlineHelpText>
        <label>First Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Status_Date__c</fullName>
        <inlineHelpText>The last date the status was updated.</inlineHelpText>
        <label>Housing Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Status__c</fullName>
        <label>Housing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_20_Sent_Date__c</fullName>
        <description>Date I-20 was mailed to the admitted student</description>
        <inlineHelpText>Date I-20 was mailed to the admitted student</inlineHelpText>
        <label>I-20 Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_Confirm_Enroll_Qualifier_Date__c</fullName>
        <description>Date the qualifier was captured for a prospective student in the Enrolled status.</description>
        <label>Intent/Confirm Enroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_Confirm_Enroll_Qualifier_Decision__c</fullName>
        <label>Intent/Confirm Enroll Decision Factor</label>
        <picklist>
            <picklistValues>
                <fullName>1st Choice Program unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHC Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance from Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to 4 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-20 issued by another University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major not offered at preferred campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not admitted to 1st choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Athletics elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too big)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too small)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on decision elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intent_Confirm_Enroll_Qualifier__c</fullName>
        <label>Intent/Confirm Enroll Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>I plan to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m still considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Baccalaureate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Baccalaureate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <label>Lead Source Subtype</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herberger Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ira A Fulton Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connor College of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Applying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS GRE Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Personal Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idealist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMR_on_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MMR on file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Math_Test_Score__c</fullName>
        <label>Math Placement Test Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Military_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From the Supplemental App in PeopleSoft</description>
        <inlineHelpText>The student has indicated an interest in applying for military educational benefits.</inlineHelpText>
        <label>Military Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Branch__c</fullName>
        <inlineHelpText>Military branch indicated on the application. The data has not been confirmed.</inlineHelpText>
        <label>Military Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <inlineHelpText>Military status indicated on the application. It has not been confirmed.</inlineHelpText>
        <label>Military Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Dependent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>National_Hispanic_Scholar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Hispanic Scholar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Online Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <label>Opportunity Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Orientation_Date__c</fullName>
        <inlineHelpText>Date student will be attending orientation.</inlineHelpText>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orientation_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orientation Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunities (Orientation Location)</relationshipLabel>
        <relationshipName>Opportunities_Orientation_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orientation_Status__c</fullName>
        <label>Orientation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>